--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav class="navbar sticky-top navbar-expand-lg bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html"
-          ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
+          ><img src="img/LogoNav.png" alt="Jireh"
         /></a>
         <a class="av__don__bosco__cel"
               href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192"
@@ -122,15 +122,24 @@
       <img src="img/logoLarge.png" class="img-fluid" alt="Logo" />
       <h1>Jireh - Verduleria y fruteria.</h1>
       <p>¡Bienvenidos! Somos un pequeño negocio familiar que se dedica a ofrecer productos frescos y de calidad a nuestros clientes. Desde el primer día hemos estado comprometidos en brindarles a nuestros clientes el mejor servicio posible y asegurarnos de que estén satisfechos con cada compra que realizan...</p><br>
-      <section>
       <h5 class="fs-5 text-bg-dark badge">Horarios:</h5>
-      <p>Lunes</p>
-      <p>Martes</p>
-      <p>Miercoles</p>
-      <p>Jueves</p>
-      <p>Viernes</p>
-      <p>Sábado</p>
-      <p>Domingo</p>
+      <section class="d-flex justify-content-center">
+      <ul class="ul__horarios">
+        <li><span>Lunes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
+        <li><span>Martes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
+        <li><span>Miercoles: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
+        <li><span>Jueves: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
+        <li><span>Viernes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
+        <li><span>Sábado: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
+        <li><span>Domingo: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
+      </ul>
+      <!-- <p class="m-0">Lunes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
+      <p class="m-0">Martes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
+      <p class="m-0">Miercoles: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
+      <p class="m-0">Jueves: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
+      <p class="m-0">Viernes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
+      <p class="m-0">Sábado: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
+      <p class="m-0">Domingo: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p> -->
     </section>
     <p></p>
       <p>El local está ubicado en <a class="text-white" href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192" target="_black"><i class="bi bi-geo-alt-fill"></i> Av. Don Bosco 276</a> de la ciudad de Paraná, Entre Ríos.</p>
@@ -141,7 +150,7 @@
 
     <div
       id="carouselExampleAutoplaying"
-      class="carousel slide"
+      class="carousel slide my-5"
       data-bs-ride="carousel"
     >
       <div class="carousel-inner" id="id__carrousel">
@@ -209,8 +218,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-
+<!-- 
     <script src="js/main.js"></script>
-    <script src="js/buscador.js"></script>
+    <script src="js/buscador.js"></script> -->
   </body>
 </html>
