--- a/verduras.html
+++ b/verduras.html
@@ -25,15 +25,17 @@
     <link rel="icon" href="img/LogoNav.png" />
   </head>
   <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
-  <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
-  <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
   <body>
     <nav class="navbar sticky-top navbar-expand-lg bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
         /></a>
-
+        <a class="av__don__bosco__cel"
+              href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192"
+              target="_black"
+              ><i class="bi bi-geo-alt-fill me-1"></i>Av. Don Bosco 276</a>
+          </li>
         <button
           class="navbar-toggler"
           type="button"
@@ -48,9 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html"
-                >Jireh</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Jireh</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -118,17 +118,19 @@
     </nav>
 
     <div class="text-center text-white container pt-3">
-      <img src="img/logoLarge.png" class="img-fluid" alt="Logo" />
-      <h1>Verduras</h1>
-      <p>Calidad a un excelente precio.</p>
+      <img src="img/logoLarge.png" class="img-fluid logo__large" alt="Logo" />
+      <h1>Jireh - Verduras</h1>
+      <p >Calidad a un excelente precio.</p>
     </div>
 
     <main class="p-3 container" id="id__verduras">
       <div>
-        <section class="row align-items-lg-center">
+        <section class="row g-0">
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" 
+            
+             >
               <img src="img/papablanca.jpg" class="card-img-top" alt="Sites" />
               <div class="card-body text-center">
                 <h5 class="card-title fs-6">Papa</h5>
@@ -139,7 +141,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< CEBOLLA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/cebolla01.jpg"
                 class="card-img-top bg-third-color"
@@ -154,7 +156,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< Zanahoria >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/zanahoria01.jpg"
                 class="card-img-top bg-third-color"
@@ -169,7 +171,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< TOMATE REDONDO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/tomate-redondo.jpg"
                 class="card-img-top bg-third-color"
@@ -184,7 +186,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -199,7 +201,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< MORRON >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/morron-rgy.jpg"
                 class="card-img-top bg-third-color"
@@ -214,7 +216,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -229,7 +231,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -244,7 +246,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -259,7 +261,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< CALABAZA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -274,7 +276,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLITO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -289,7 +291,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -304,7 +306,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -319,7 +321,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -334,7 +336,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -349,7 +351,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -364,7 +366,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -379,7 +381,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -394,7 +396,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -409,7 +411,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -424,7 +426,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -439,7 +441,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -454,7 +456,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -469,7 +471,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -484,7 +486,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -499,7 +501,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -514,7 +516,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -529,7 +531,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -544,7 +546,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -559,7 +561,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -574,7 +576,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -589,7 +591,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -604,7 +606,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -619,7 +621,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -634,7 +636,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -649,7 +651,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -664,7 +666,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -679,7 +681,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -694,7 +696,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -709,7 +711,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -724,7 +726,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -739,7 +741,7 @@
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
-            <div class="card text-bg-dark m-1" style="width: 10rem">
+            <div class="card text-bg-dark m-1" >
               <img
                 src="img/papablanca.jpg"
                 class="card-img-top bg-third-color"
@@ -792,7 +794,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/main.js"></script>
-    <script src="js/buscador.js"></script>
+    <!-- <script src="js/main.js"></script>
+    <script src="js/buscador.js"></script> -->
   </body>
 </html>
