--- a/ofertas.html
+++ b/ofertas.html
@@ -95,7 +95,7 @@
               ></a>
             </li>
           </ul>
-          <li class="me-3 av__don">
+          <li class="me-3">
             <a
               class="av__don__bosco"
               href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192"
@@ -119,59 +119,106 @@
     </nav>
 
     <div class="text-center text-white container pt-3">
-      <img src="img/logoLarge.png" class="img-fluid" alt="Logo" />
+      <img src="img/logoLarge.png" class="img-fluid logo__large" alt="Logo" />
       <h1>Ofertas!</h1>
       <p>Calidad a un excelente precio.</p>
     </div>
 
     <!-- <<< BOLSA DE PAPA >>> -->
-    <main class="container">
-      <div class="card text-bg-dark my-3 mx-auto">
+    <section class="container">
+      <div class="row">
+      <div class="card text-bg-dark my-3 mx-auto col-5 my-3 mx-auto col-5 col-5">
         <img src="img/bolsa de papa.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
-          <h5 class="card-title text-center"></h5>
+          <h5 class="card-title"></h5>
           <p class="card-text"></p>
           <p class="card-text"><small></small></p>
         </div>
       </div>
 
       <!-- <<< BOLSA DE CEBOLLA >>> -->
-      <div class="card text-bg-dark my-3 mx-auto">
+      <div class="card text-bg-dark my-3 mx-auto col-5 my-3 mx-auto col-5">
         <img src="img/bolsa de cebolla.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
-          <h5 class="card-title text-center"></h5>
+          <h5 class="card-title"></h5>
           <p class="card-text"></p>
           <p class="card-text"><small></small></p>
         </div>
       </div>
       <!-- <<< TOMATE PERITA >>> -->
-      <div class="card text-bg-dark my-3 mx-auto">
+      <div class="card text-bg-dark my-3 mx-auto col-5 my-3 mx-auto col-5">
         <img src="img/tomate-peritaX2kg.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
-          <h5 class="card-title text-center"></h5>
+          <h5 class="card-title"></h5>
           <p class="card-text"></p>
           <p class="card-text"><small></small></p>
         </div>
       </div>
 
-      <div class="card text-bg-dark my-3 mx-auto">
+      <div class="card text-bg-dark my-3 mx-auto col-5">
         <img src="img/bolsa de papa.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
-          <h5 class="card-title text-center"></h5>
+          <h5 class="card-title"></h5>
           <p class="card-text"></p>
           <p class="card-text"><small></small></p>
         </div>
       </div>
 
-      <div class="card text-bg-dark my-3 mx-auto">
+      <div class="card text-bg-dark my-3 mx-auto col-5">
         <img src="img/bolsa de papa.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
-          <h5 class="card-title text-center"></h5>
+          <h5 class="card-title"></h5>
           <p class="card-text"></p>
           <p class="card-text"><small></small></p>
         </div>
       </div>
-    </main>
+
+      <div class="card text-bg-dark my-3 mx-auto col-5">
+        <img src="img/bolsa de papa.png" class="card-img" alt="..." />
+        <div class="card-img-overlay">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small></small></p>
+        </div>
+      </div>
+
+      <div class="card text-bg-dark my-3 mx-auto col-5">
+        <img src="img/bolsa de papa.png" class="card-img" alt="..." />
+        <div class="card-img-overlay">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small></small></p>
+        </div>
+      </div>
+
+      <div class="card text-bg-dark my-3 mx-auto col-5">
+        <img src="img/bolsa de papa.png" class="card-img" alt="..." />
+        <div class="card-img-overlay">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small></small></p>
+        </div>
+      </div>
+
+      <div class="card text-bg-dark my-3 mx-auto col-5">
+        <img src="img/bolsa de papa.png" class="card-img" alt="..." />
+        <div class="card-img-overlay">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small></small></p>
+        </div>
+      </div>
+
+      <div class="card text-bg-dark my-3 mx-auto col-5">
+        <img src="img/bolsa de papa.png" class="card-img" alt="..." />
+        <div class="card-img-overlay">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small></small></p>
+        </div>
+      </div>
+    </div>
+    </section>
 
     <footer class="bg-dark pt-1 mt-5">
       <div class="container text-center">
