--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <li><span>Jueves: 9:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
         <li><span>Viernes: 9:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
         <li><span>Sábado: 9:00hs - 14:00hs | 17:00hs - 21:00hs.</span></li>
-        <li><span>Domingo: 9:30hs - 13:30hs | 17:00hs - 21:00hs.</span></li>
+        <li><span>Domingo: 9:30hs - 13:30hs.</span></li>
       </ul>
       <!-- <p class="m-0">Lunes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
       <p class="m-0">Martes: 8:00hs - 14:00hs | 17:00hs - 21:00hs.</p>
