--- a/frutas.html
+++ b/frutas.html
@@ -134,9 +134,9 @@
             >
               <img src="img/naranja01.jpg" class="card-img-top" alt="Naranja" />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6 articulo">Naranja</h5>
+                <h5 class="card-title fs-6 articulo">Naranja jugo</h5>
                 <p class="card-text">1kg.</p>
-                <a href="#" class="btn btn-success">$199</a>
+                <a href="#" class="btn btn-success">$299</a>
               </div>
             </div>
           </article>
